# nebula_engine

./: .gitignore  CMakeLists.txt  README.md  nebula_engine.vcxproj  nebula_engine.vcxproj.filters
assets/: 2Dfrag.glsl  2Dvert2.glsl  frag.glsl  vert.glsl
include/: engine.h  engine2.h  gl_backend.h  hecs.h  map.h
include/glad/: glad.h
includes/glad/: glad.c  glad.h
lib/: glfw3.lib
src/: engine.c  engine.hpp  gl_backend.c  main.c  main.cpp  map.c  opengl.hpp
x64/Debug/: nebula_engine.exe.recipe  nebula_engine.ilk  vc143.idb
x64/Debug/nebula_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  nebula_engine.lastbuildstate
